--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,10 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="/" class="nav-link">首页</a></li>
-                <li><a href="/text-sjt" class="nav-link">文字题目</a></li>
-                <li><a href="/image-sjt" class="nav-link">图片题目</a></li>
-                <li><a href="/video-sjt" class="nav-link">视频题目</a></li>
+                <li><a href="/text-sjt" class="nav-link">文字题目生成</a></li>
+                <li><a href="/image-sjt" class="nav-link">图片题目生成</a></li>
+                <li><a href="/video-sjt" class="nav-link">视频题目生成</a></li>
+                <li><a href="/quiz" class="nav-link">生成结果</a></li>
             </ul>
         </div>
     </nav>
